refactor(differ): SchemaDiffer -> column, constraint, sequence, relationship, tableGenerator differ로 분기
test(differ): differ 테스트 추가
- core 커버리지 98/83

feat(processer): ElementCollection 어노테이션 지원
- ElementCollectionHandler 추가

refactor(processor): columnHandler 리졸버 패턴으로 srp, 추가 유틸 및 빌더 패턴 적용

test(processor): 주요 로직 검증